[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/escoria-ui-simplemouse-7cog/inventory/inventory_ui.gd" type="Script" id=1]
[ext_resource path="res://addons/escoria-ui-simplemouse-7cog/images/inventory_panel.png" type="Texture" id=2]
[ext_resource path="res://addons/escoria-core/ui_library/inventory/esc_inventory_container.gd" type="Script" id=3]
[ext_resource path="res://addons/escoria-ui-simplemouse-7cog/images/satchel00_off.png" type="Texture" id=4]
[ext_resource path="res://addons/escoria-ui-simplemouse-7cog/images/satchel00_on.png" type="Texture" id=5]

[node name="inventory_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource( 1 )
inventory_ui_container = NodePath("FloatingInventory/panel/MarginContainer/ScrollContainer/container")

[node name="FloatingInventory" type="CanvasLayer" parent="."]

[node name="panel" type="TextureRect" parent="FloatingInventory"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -516.0
margin_top = -130.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="FloatingInventory/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="FloatingInventory/panel/MarginContainer"]
margin_left = 20.0
margin_top = 80.0
margin_right = 496.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
scroll_vertical_enabled = false

[node name="container" type="HBoxContainer" parent="FloatingInventory/panel/MarginContainer/ScrollContainer"]
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
script = ExtResource( 3 )

[node name="InventoryTween" type="Tween" parent="FloatingInventory"]
playback_speed = 2.0
playback/speed = 2.0

[node name="Buttons" type="CanvasLayer" parent="."]
layer = 2

[node name="inventory_button" type="TextureButton" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 4

[connection signal="mouse_exited" from="FloatingInventory/panel" to="." method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/inventory_button" to="." method="_on_inventory_button_hovered"]
[connection signal="pressed" from="Buttons/inventory_button" to="." method="_on_inventory_button_pressed"]
